--- a/src/app/connect_code/ConnectCode.css
+++ b/src/app/connect_code/ConnectCode.css
@@ -54,15 +54,30 @@ body {
     font-size: 24px;
     font-weight: bolder;
     color: #1B1B1B;
-    margin-bottom: 20px;
     font-family: Outfit;
     line-height: 32px;
     letter-spacing: 0.24px;
     margin-right: 80px;
   }
+
+  .connect-wallet {
+    color: var(--Grays-Black, var(--Grays-Black, #000));
+    text-align: center;
+    font-family: Poppins;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
   
+  .girl-image {
+    width: 180.923px;
+    height: 168px;
+    margin-left:25px;
+    margin-bottom: 30px;
+  }
+
   .number-section {
-    margin: 20px 0;
     color: var(--Grays-Black, #000);
     font-family: Inter;
     font-size: 20px;
@@ -71,48 +86,27 @@ body {
     line-height: normal;
     letter-spacing: 0.2px;
   }
+
   p {
-    padding: 50px;
-  }
-  b {
-    font-weight: 600;
+    padding: 40px 0px 20px 0px;
   }
   
   .input-section {
     text-align: left;
+    display: flex;
   }
   
-  .input-label {
-    font-size: 14px;
-    font-family: Poppins;
-    color: #000;
-    margin-bottom: 10px;
-    display: block;
-    font-weight: 500;
-    line-height: normal;
-  }
-  
-  .input-box {
-    width: 100%;
-    padding: 12px 16px;
-    margin-bottom: 20px;
-    align-items: center;
-    align-self: stretch;
-    gap: 8px;
-    border: 1px solid #ccc;
-    border-radius: 12px;
-    font-size: 16px;
-    color: var(--Neutral-Dark-Lightest, #8F9098);
-  }
+
   .skip-button {
-    width: 40%;
+    width: 150px;
     background-color: #e0e0e0; 
     color: #6d6d6d;
+    margin-left:5px;
   }
 
   
   .confirm-button {
-    width: 40%;
+    width: 150px;
     padding: 12px;
     border: none;
     border-radius: 8px;
@@ -121,6 +115,7 @@ body {
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
+    margin-left: 25px;
   }
   
   .confirm-button:hover {
