--- a/src/app/connected/Connected.css
+++ b/src/app/connected/Connected.css
@@ -21,11 +21,10 @@ body {
   }
   
   .connect-title {
-    color: #0056d2;
     font-size: 24px;
     font-weight: bold;
     font-family: Outfit;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     font-style: normal;
     letter-spacing: 0.24px;
   }
@@ -60,9 +59,16 @@ body {
     height: auto;
   }
   
-  .welcome-text {
-    font-size: 18px;
-    color: #1B1B1B;
+  .welcome-btn {
     margin-top: 20px;
+    width: 327px;
+    padding: 12px;
+    border: none;
+    border-radius: 8px;
+    background-color: #2945FF;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
   }
   
