--- a/src/app/connect_code/ConnectCode.css
+++ b/src/app/connect_code/ConnectCode.css
@@ -94,6 +94,9 @@ body {
   .input-section {
     text-align: left;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
   }
   
 
@@ -115,10 +118,17 @@ body {
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
-    margin-left: 25px;
   }
   
   .confirm-button:hover {
     background-color: #1d36cc;
   }
   
+  .input-field {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #e0e0e0;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    font-size: 16px;
+  }
